--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,20 @@
 [package]
 name = "collider"
 version = "0.1.0"
-authors = ["BoxMrChen"]
+authors = ["BoxMrChen <boxmrchen@fastmail.com>"]
 readme      = "README.md"
 repository  = "https://github.com/nishuzumi/collider"
 edition = "2021"
 
 [workspace]
 members = ['atomicals-electrumx']
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [[bin]]
 name = "collider"
 path = "src/main.rs"
 
 [dependencies]
-atomicals-electrumx = { path = './atomicals-electrumx' }
+atomicals-electrumx = {version = "0.2.1", path = 'atomicals-electrumx' }
 bitcoin = "0.31.1"
 eyre = "0.6.12"
 tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
