--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,13 +64,14 @@ jobs:
           generate_release_notes: true
           files: artifacts/*
 
-  publish-on-crates-io:
-    name: Publish on crates.io
-    runs-on: ubuntu-latest
-    steps:
-      - name: Fetch latest code
-        uses: actions/checkout@v4
-      - name: Login
-        run: cargo login ${{ secrets.CARGO_REGISTRY_TOKEN }}
-      - name: Publish
-        run: cargo publish --locked
+#  No need publish on crates.io because we are using GitHub releases
+#  publish-on-crates-io:
+#    name: Publish on crates.io
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Fetch latest code
+#        uses: actions/checkout@v4
+#      - name: Login
+#        run: cargo login ${{ secrets.CARGO_REGISTRY_TOKEN }}
+#      - name: Publish
+#        run: cargo publish --locked
