--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,14 @@ license = "AGPL-3"
 [workspace]
 members = ['atomicals-electrumx']
 
+[profile.ci-dev]
+incremental = false
+inherits    = "dev"
+
+[profile.ci-release]
+inherits = "release"
+lto      = true
+
 [build-dependencies]
 # crates.io
 vergen = { version = "8.3", features = ["build", "cargo", "git", "gitcl"] }
