--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,11 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Rust toolchain
         run: rustup target add ${{ matrix.target.name }}
+      - name: Install OpenCL (Linux)
+        if: matrix.target.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt install opencl-headers ocl-icd-opencl-dev -y
       - name: Build
         run: cargo build --profile ci-release --locked --target ${{ matrix.target.name }}
       - name: Compress
