--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,12 +33,16 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt install opencl-headers ocl-icd-opencl-dev -y
-      - name: Build OpenCL SDK (Windows)
+      - uses: Jimver/cuda-toolkit@v0.2.14
         if: matrix.target.os == 'windows-latest'
-        run: |
-          git clone --recursive https://github.com/KhronosGroup/OpenCL-SDK.git
-          cmake -G "Visual Studio 17 2022" -A x64 -T v143 -D CMAKE_INSTALL_PREFIX=./OpenCL-SDK/install -B ./OpenCL-SDK/build -S ./OpenCL-SDK
-          cmake --build OpenCL-SDK/build --config Release --target install -- /m /v:minimal
+        id: cuda-toolkit
+        with:
+          cuda: '12.4'
+          method: "network"
+          sub-packages: "nvcc,opencl"
+      - name: Set RUSTFLAGS (Windows)
+        if: matrix.target.os == 'windows-latest'
+        run: echo "RUSTFLAGS=-L ${{ steps.cuda-toolkit.outputs.CUDA_PATH }}/lib/x64" >> $GITHUB_ENV
       - name: Build
         run: cargo build --profile ci-release --locked --target ${{ matrix.target.name }}
       - name: Compress
