chore: change method

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -36,7 +36,7 @@ jobs:
         id: cuda-toolkit
         with:
           cuda: '12.3.2'
-          method: "network"
+          method: "local"
           sub-packages: '["nvcc","opencl"]'
       - name: Set RUSTFLAGS (Windows)
         if: matrix.target.os == 'windows-latest'
