--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,3 +47,7 @@ indicatif = { version = "0.17.8", features = ["improved_unicode"] }
 ocl = { version = "0.19.6" }
 colored = "2.1.0"
 prettytable-rs = "0.10.0"
+
+[features]
+default = []
+op_sha256 = []
